# websql

./: .gitignore  ARCHITECTURE.md  CACHE_TEST.md  CLAUDE.md  TASKS.md  TAURI_STATUS.md  build-portable-windows.ps1  build-tauri-windows.sh  build-tauri.sh  build-windows-from-wsl.sh  create-icons.py  create-portable-windows.sh  create-proper-icons.py  debug-websql.bat  index.html  install-gui-libs.sh  install-javascriptcore.sh  install-tauri-deps-command.sh  install-tauri-deps.sh  package-lock.json  package.json  prd.md  prepare-for-windows.sh  run-tauri-fast.sh  run-tauri-software.sh  setup-display.sh  start-dbus.sh  tsconfig.app.json  vite.config.tauri.ts  vite.config.ts  wsl-config.txt
.github/workflows/: build-portable-windows-improved.yml  build-portable-windows.yml  cache-warm.yml  cache-warming.yml  ci.yml  create-release.yml  pages.yml  pr-windows-portable.yml  release.yml  tauri-build.yml  tauri-simple-test.yml  (+3 more)
docs/: CACHING_STRATEGY.md  GITHUB_ACTIONS.md  PUPPETEER_ARM64_FIX.md  QUICK_START_WINDOWS.md  SELF_TESTING_PROPOSAL.md  TAURI_BUILD_INSTRUCTIONS.md  TAURI_QUICKSTART.md  WEBVIEW2_OPTIONS.md  WINDOWS_BUILD_GUIDE.md  build-portable-instructions.md  test-multi-select.md
sample-data/: products.csv  products_migrated.csv
scripts/: bump-version.js  extract-portable.ps1  screenshot-playwright.js  sync-version.js  test-portable.ps1  test-sql-features.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
webview2/: main.js  webview2.html
(+46 files in other folders)
