[package]
name = "websql-data-compare"
version = "0.1.0"
description = "WebSQL Data Compare - Compare data across different sources"
authors = ["WebSQL Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Enable optimizations for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]