[package]
name = "websql-data-compare"
version = "0.2.9"
description = "WebSQL Data Compare - Compare data across different sources"
authors = ["WebSQL Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

[profile.release]
# Enable optimizations for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]